Semantics and position

--- a/Project.html
+++ b/Project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CURSO SERFRONTEND</title>
-    <link href="formatacao.css" rel="stylesheet">
+    <link href="estilos/formatacao.css" rel="stylesheet">
 </head>
     <body>
 
